--- a/Assets/UI Toolkit/Lobby/LobbyMenus/LobbyHostListScreen.uxml
+++ b/Assets/UI Toolkit/Lobby/LobbyMenus/LobbyHostListScreen.uxml
@@ -1,6 +1,7 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" xsi="http://www.w3.org/2001/XMLSchema-instance" engine="UnityEngine.UIElements" editor="UnityEditor.UIElements" noNamespaceSchemaLocation="../../../UIElementsSchema/UIElements.xsd" editor-extension-mode="False">
+    <ui:Template name="LobbyConnectionList" src="project://database/Assets/UI%20Toolkit/Lobby/LobbyMenus/LobbyConnectionList.uxml?fileID=9197481963319205126&amp;guid=76b50e0248ac3eb469cbcafa9e32668d&amp;type=3#LobbyConnectionList" />
     <ui:VisualElement style="flex-grow: 1; width: 500px; align-items: auto; align-self: center; justify-content: center;">
-        <ui:ListView focusable="true" name="ListViewConnections" style="height: 400px; align-self: stretch; flex-shrink: 0;" />
+        <ui:Instance template="LobbyConnectionList" name="LobbyConnectionList" />
         <ui:VisualElement style="flex-grow: 0; flex-direction: row; flex-shrink: 0; justify-content: center; align-self: stretch;">
             <ui:Button text="Back" parse-escape-sequences="true" display-tooltip-when-elided="true" name="ButtonBack" style="align-self: center; width: 100px;" />
             <ui:Button text="Start" parse-escape-sequences="true" display-tooltip-when-elided="true" name="ButtonStart" style="width: 100px; align-self: center;" />
