--- a/Assets/UI Toolkit/Lobby/LobbyStyle.uss
+++ b/Assets/UI Toolkit/Lobby/LobbyStyle.uss
@@ -68,3 +68,23 @@
 .lobby-background {
     background-color: rgb(8, 24, 84);
 }
+
+.player-name-label {
+    -unity-font-style: bold;
+    border-left-color: rgb(180, 14, 14);
+    border-right-color: rgb(180, 14, 14);
+    border-top-color: rgb(180, 14, 14);
+    border-bottom-color: rgb(180, 14, 14);
+    border-top-width: 1px;
+    border-right-width: 1px;
+    border-bottom-width: 1px;
+    border-left-width: 1px;
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
+    border-bottom-right-radius: 15px;
+    border-bottom-left-radius: 15px;
+    padding-top: 8px;
+    padding-right: 8px;
+    padding-bottom: 8px;
+    padding-left: 8px;
+}
