--- a/Assets/UI Toolkit/Lobby/LobbyUI.uxml
+++ b/Assets/UI Toolkit/Lobby/LobbyUI.uxml
@@ -4,6 +4,7 @@
     <ui:Template name="LobbyClientListScreen" src="project://database/Assets/UI%20Toolkit/Lobby/LobbyMenus/LobbyClientListScreen.uxml?fileID=9197481963319205126&amp;guid=9235d824cebe72a4593ca295461287f4&amp;type=3#LobbyClientListScreen" />
     <ui:Template name="LobbyHostJoinScreen" src="project://database/Assets/UI%20Toolkit/Lobby/LobbyMenus/LobbyHostJoinScreen.uxml?fileID=9197481963319205126&amp;guid=cfda778f6f3ca0141bbf5cc817f88f1f&amp;type=3#LobbyHostJoinScreen" />
     <ui:Template name="LobbyHostListScreen" src="project://database/Assets/UI%20Toolkit/Lobby/LobbyMenus/LobbyHostListScreen.uxml?fileID=9197481963319205126&amp;guid=5ab5f5b4563754248b48a2ff18aa2f1b&amp;type=3#LobbyHostListScreen" />
+    <ui:Template name="CreditsScreen" src="project://database/Assets/UI%20Toolkit/Lobby/LobbyMenus/CreditsScreen.uxml?fileID=9197481963319205126&amp;guid=ef9b157c12f3a1f4d81fd88fb9256805&amp;type=3#CreditsScreen" />
     <Style src="project://database/Assets/UI%20Toolkit/Lobby/LobbyStyle.uss?fileID=7433441132597879392&amp;guid=466f206a5bdf32b48b2842093df81fdb&amp;type=3#LobbyStyle" />
     <ui:VisualElement name="lobby-background" class="lobby-background" style="flex-grow: 1;">
         <ui:Instance template="LobbyMainScreen" name="LobbyMainScreen" style="flex-grow: 1;" />
@@ -16,5 +17,6 @@
             <AttributeOverrides element-name="TextFieldUsername" value="&lt;host user&gt;" />
         </ui:Instance>
         <ui:Instance template="LobbyHostListScreen" name="LobbyHostListScreen" style="flex-grow: 1; display: none;" />
+        <ui:Instance template="CreditsScreen" name="CreditsScreen" style="display: none; flex-grow: 1;" />
     </ui:VisualElement>
 </ui:UXML>
