--- a/Assets/UI Toolkit/Lobby/LobbyMenus/CreditsScreen.uxml
+++ b/Assets/UI Toolkit/Lobby/LobbyMenus/CreditsScreen.uxml
@@ -9,6 +9,6 @@
             <ui:Label tabindex="-1" text="Emil Levo" parse-escape-sequences="true" display-tooltip-when-elided="true" name="Label" style="font-size: 24px; margin-top: 25px; margin-right: 15px; margin-bottom: 5px; margin-left: 15px; -unity-text-align: upper-center;" />
             <ui:Label tabindex="-1" text="Objective Scheduler, Networking, Level Design" parse-escape-sequences="true" display-tooltip-when-elided="true" style="margin-top: 5px; margin-right: 15px; margin-bottom: 15px; margin-left: 15px; -unity-text-align: upper-center;" />
         </ui:VisualElement>
-        <ui:Button text="Button" parse-escape-sequences="true" display-tooltip-when-elided="true" name="ButtonBack" style="align-self: center; width: 150px;" />
+        <ui:Button text="Back" parse-escape-sequences="true" display-tooltip-when-elided="true" name="ButtonBack" style="align-self: center; width: 150px;" />
     </ui:VisualElement>
 </ui:UXML>
